// Contract Commitment Dataset Contract
// This file documents the new ContractCommitment proto message.
// Actual implementation goes in proto/finfocus/v1/focus.proto (or separate file)

syntax = "proto3";

package finfocus.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/rshade/finfocus-spec/sdk/go/proto;pbc";

// =============================================================================
// NEW ENUM: FocusContractCommitmentCategory
// =============================================================================

// FocusContractCommitmentCategory represents the type of commitment.
// FOCUS 1.3 Contract Commitment Dataset specification.
enum FocusContractCommitmentCategory {
  // Default/unspecified value.
  FOCUS_CONTRACT_COMMITMENT_CATEGORY_UNSPECIFIED = 0;
  // Monetary spend commitment (e.g., $10,000/month minimum).
  FOCUS_CONTRACT_COMMITMENT_CATEGORY_SPEND = 1;
  // Usage quantity commitment (e.g., 1000 compute hours).
  FOCUS_CONTRACT_COMMITMENT_CATEGORY_USAGE = 2;
}

// =============================================================================
// NEW MESSAGE: ContractCommitment
// =============================================================================

// ContractCommitment represents a contractual commitment record in the
// FOCUS 1.3 Contract Commitment supplemental dataset.
//
// This is a separate dataset from Cost and Usage data, allowing practitioners
// to query contract terms independently from individual cost line items.
//
// Reference: FOCUS 1.3 Contract Commitment Dataset
message ContractCommitment {
  // ==========================================================================
  // Identity Fields
  // ==========================================================================

  // ContractCommitmentId: Unique identifier for this specific commitment.
  // REQUIRED. Primary key for the commitment record.
  string contract_commitment_id = 1;

  // ContractId: Identifier of the parent contract containing this commitment.
  // REQUIRED. Links to the broader contract agreement.
  string contract_id = 2;

  // ==========================================================================
  // Classification Fields
  // ==========================================================================

  // ContractCommitmentCategory: Category of commitment (SPEND or USAGE).
  // FOCUS 1.3 Contract Commitment Category (CONDITIONAL).
  FocusContractCommitmentCategory contract_commitment_category = 3;

  // ContractCommitmentType: Provider-specific type of commitment.
  // Free-form string (e.g., "Reserved Instance", "Savings Plan", "CUD").
  // FOCUS 1.3 Contract Commitment Type (CONDITIONAL).
  string contract_commitment_type = 4;

  // ==========================================================================
  // Commitment Period Fields
  // ==========================================================================

  // ContractCommitmentPeriodStart: Start of the commitment period.
  // When the specific commitment obligations begin.
  // FOCUS 1.3 Contract Commitment Period Start (CONDITIONAL).
  google.protobuf.Timestamp contract_commitment_period_start = 5;

  // ContractCommitmentPeriodEnd: End of the commitment period.
  // When the specific commitment obligations end.
  // FOCUS 1.3 Contract Commitment Period End (CONDITIONAL).
  google.protobuf.Timestamp contract_commitment_period_end = 6;

  // ==========================================================================
  // Contract Period Fields
  // ==========================================================================

  // ContractPeriodStart: Start of the overall contract.
  // When the parent contract agreement begins.
  // FOCUS 1.3 Contract Period Start (CONDITIONAL).
  google.protobuf.Timestamp contract_period_start = 7;

  // ContractPeriodEnd: End of the overall contract.
  // When the parent contract agreement ends.
  // FOCUS 1.3 Contract Period End (CONDITIONAL).
  google.protobuf.Timestamp contract_period_end = 8;

  // ==========================================================================
  // Financial Fields
  // ==========================================================================

  // ContractCommitmentCost: Monetary amount of the commitment.
  // For SPEND category, this is the dollar/currency amount committed.
  // FOCUS 1.3 Contract Commitment Cost (CONDITIONAL).
  double contract_commitment_cost = 9;

  // ContractCommitmentQuantity: Quantity amount of the commitment.
  // For USAGE category, this is the unit quantity committed.
  // FOCUS 1.3 Contract Commitment Quantity (CONDITIONAL).
  double contract_commitment_quantity = 10;

  // ContractCommitmentUnit: Unit of measure for quantity.
  // Examples: "Hours", "GB", "vCPU-Hours", "Requests".
  // FOCUS 1.3 Contract Commitment Unit (CONDITIONAL).
  string contract_commitment_unit = 11;

  // BillingCurrency: ISO 4217 currency code for monetary values.
  // REQUIRED. Format: 3-letter currency code (e.g., "USD", "EUR").
  string billing_currency = 12;
}
